--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^14.0.1"
+    "cypress": "^14.0.3",
+    "cypress-iframe": "^1.0.1"
+  },
+  "dependencies": {
+    "selenium-webdriver": "^4.28.1"
   }
 }
